--- a/GameDomino/Resources/EntryFormResources.en.resx
+++ b/GameDomino/Resources/EntryFormResources.en.resx
@@ -117,11 +117,32 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="btnEnglish" xml:space="preserve">
+    <value>English</value>
+  </data>
+  <data name="btnEntry" xml:space="preserve">
+    <value>Entry</value>
+  </data>
+  <data name="btnRegistration" xml:space="preserve">
+    <value>Registration</value>
+  </data>
+  <data name="btnRussian" xml:space="preserve">
+    <value>Russian</value>
+  </data>
   <data name="EntryFormTitle" xml:space="preserve">
     <value>Entry</value>
   </data>
+  <data name="labelPassword" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="lblNoAccount" xml:space="preserve">
+    <value>No account?</value>
+  </data>
   <data name="lblTitle" xml:space="preserve">
     <value>Domination</value>
+  </data>
+  <data name="lnlLogin" xml:space="preserve">
+    <value>Login</value>
   </data>
   <data name="LoginErrorMessage" xml:space="preserve">
     <value>Incorrect login or password</value>
