--- a/GameDomino/Resources/EntryFormResources.resx
+++ b/GameDomino/Resources/EntryFormResources.resx
@@ -117,11 +117,32 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="btnEnglish" xml:space="preserve">
+    <value>Английский</value>
+  </data>
+  <data name="btnEntry" xml:space="preserve">
+    <value>Вход</value>
+  </data>
+  <data name="btnRegistration" xml:space="preserve">
+    <value>Регистрация </value>
+  </data>
+  <data name="btnRussian" xml:space="preserve">
+    <value>Русский</value>
+  </data>
   <data name="EntryFormTitle" xml:space="preserve">
     <value>Вход</value>
   </data>
+  <data name="labelPassword" xml:space="preserve">
+    <value>Пароль</value>
+  </data>
+  <data name="lblNoAccount" xml:space="preserve">
+    <value>Нет аккаунта?</value>
+  </data>
   <data name="lblTitle" xml:space="preserve">
     <value>Доминировние </value>
+  </data>
+  <data name="lnlLogin" xml:space="preserve">
+    <value>Логин</value>
   </data>
   <data name="LoginErrorMessage" xml:space="preserve">
     <value>Неправильный логин или пароль</value>
