--- a/GameDomino/Resources/RegistrationResources.resx
+++ b/GameDomino/Resources/RegistrationResources.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!--
-    Microsoft ResX Schema
-
+  <!-- 
+    Microsoft ResX Schema 
+    
     Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
     associated with the data types.
-
+    
     Example:
-
+    
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-
-    There are any number of "resheader" rows that contain simple
+                
+    There are any number of "resheader" rows that contain simple 
     name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
     mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
-
+    
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-
+    
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
+    value   : The object must be serialized into a byte array 
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -117,10 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="TimerGame.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>149, 17</value>
-  </metadata>
+  <data name="btnRegistration" xml:space="preserve">
+    <value>Зарегистрироваться</value>
+  </data>
+  <data name="EmptyFieldsError" xml:space="preserve">
+    <value>Введите логин и пароль</value>
+  </data>
+  <data name="lblLogin" xml:space="preserve">
+    <value>Логин </value>
+  </data>
+  <data name="lblPassword" xml:space="preserve">
+    <value>Пароль</value>
+  </data>
+  <data name="lblPasswortRepeate" xml:space="preserve">
+    <value>Повторите пароль</value>
+  </data>
+  <data name="lblRegistration" xml:space="preserve">
+    <value>Регистрация</value>
+  </data>
+  <data name="LoginRequirementsError" xml:space="preserve">
+    <value>Логин должен содержать от 2 до 20 символов, начинаться с буквы и состоять только из латинских букв и цифр</value>
+  </data>
+  <data name="LoginTakenError" xml:space="preserve">
+    <value>Такой логин уже занят!</value>
+  </data>
+  <data name="PasswordMismatchError" xml:space="preserve">
+    <value>Пароли не совпадают</value>
+  </data>
+  <data name="PasswordRequirementsError" xml:space="preserve">
+    <value>Пароль должен содержать минимум 8 символов, хотя бы одну цифру или спецсимвол, а также хотя бы одну заглавную и одну строчную латинскую букву</value>
+  </data>
+  <data name="RegistrationErrorMessage" xml:space="preserve">
+    <value>Ошибка</value>
+  </data>
+  <data name="RegistrationErrorTitle" xml:space="preserve">
+    <value>Ошибка регистрации</value>
+  </data>
+  <data name="RegistrationForm" xml:space="preserve">
+    <value>Регистрация</value>
+  </data>
+  <data name="RegistrationSuccessMessage" xml:space="preserve">
+    <value>Регистрация прошла успешно!</value>
+  </data>
+  <data name="RegistrationSuccessTitle" xml:space="preserve">
+    <value>Успешная регистрация</value>
+  </data>
 </root>
